# kpi-web-labs

./: README.md  docker-compose.override.yaml  docker-compose.yaml
api_gateway/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  services.yaml.example
api_gateway/src/: config.py  ioc.py  main.py
api_gateway/src/adapters/: aiohttp_gateway_router.py
api_gateway/src/dependencies/: gateway_router.py  jwt_auth.py
api_gateway/src/exceptions/: container.py  handlers.py
api_gateway/src/routers/: generic.py  images.py  posts.py  users.py
api_gateway/src/schemas/: posts.py  users.py
api_gateway/src/utils/: aiohttp_gateway_router.py  broker_provider.py  jwt_auth.py
frontend/: Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  package-lock.json  package.json  (+1 more)
posts_service/: .env.example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
posts_service/src/: config.py  ioc.py  main.py
posts_service/src/application/: dto.py  interactors.py  interfaces.py
posts_service/src/controllers/: amqp.py  schemas.py
posts_service/src/domain/: entities.py
posts_service/src/infrastructure/: models.py  repositories.py
posts_service/src/infrastructure/migration/: env.py
posts_service/src/infrastructure/migration/versions/: 27718945f2a8_init.py
users_service/: .env.example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
users_service/src/: config.py  ioc.py  main.py
users_service/src/application/: dto.py  interactors.py  interfaces.py
users_service/src/controllers/: amqp.py  http.py  schemas.py
users_service/src/domain/: entities.py
users_service/src/infrastructure/: jwt_token.py  models.py  repositories.py
users_service/src/infrastructure/migrations/versions/: e349f6b37578_init.py
(+32 files in other folders)
